src/objects/External_Endpoint__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Information about external Endpoint</description>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>Access Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Api_Endpoint_URL__c</fullName>
        <label>Api Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notepad_URL__c</fullName>
        <label>Notepad URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_key__c</fullName>
        <label>Secret key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>External Endpoint</label>
</CustomObject>